--- a/vignettes/jfaVignette.Rmd
+++ b/vignettes/jfaVignette.Rmd
@@ -12,7 +12,7 @@ author: Koen Derks
 
 ## Introduction and scenario
 
-This vignette accompanies the `jfa` R package and aims to show how the it faciliates auditors in their standard audit samling workflow (hereafter "audit workflow"). In this example of the audit workflow, we will consider the case of BuildIt. BuildIt is a fictional construction company in the United States that is being audited by Laura, an external auditor for a fictional audit firm. Throughout the year, BuildIt has recorded every transaction they have made in their financial statements. Laura's job as an auditor is to make a judgment about the fairness of these financial statements. In other words, Laura needs to either approve or not approve BuildIt's financial statements. To not approve the financial statements would mean that, as a whole, the financial statements contain errors that are considered *material*. This means that the errors in the financial statements are large enough that they might influence the decision of someone relying on the financial statements. Since BuildIt is a small company, their financial statements only consist of 3500 transactions that each have a corresponding recorded book value. Before assessing the details in the financial statements, Laura already tested BuildIt's computer systems that processed these transactions and found that they were quite reliable. 
+This vignette accompanies the `jfa` R package and aims to show how the it facilitates auditors in their standard audit sampling workflow (hereafter "audit workflow"). In this example of the audit workflow, we will consider the case of BuildIt. BuildIt is a fictional construction company in the United States that is being audited by Laura, an external auditor for a fictional audit firm. Throughout the year, BuildIt has recorded every transaction they have made in their financial statements. Laura's job as an auditor is to make a judgment about the fairness of these financial statements. In other words, Laura needs to either approve or not approve BuildIt's financial statements. To not approve the financial statements would mean that, as a whole, the financial statements contain errors that are considered *material*. This means that the errors in the financial statements are large enough that they might influence the decision of someone relying on the financial statements. Since BuildIt is a small company, their financial statements only consist of 3500 transactions that each have a corresponding recorded book value. Before assessing the details in the financial statements, Laura already tested BuildIt's computer systems that processed these transactions and found that they were quite reliable. 
 
 In order to draw a conclusion about the fairness of BuildIt's recorded transactions, Laura separates her audit workflow into four stages. First, she will plan the size of the subset she needs to inspect from the financial statements to make a well-substantiated inference about them as a whole. Second, she will select the required subset from the financial statements. Third, she will inspect the selected subset and determines the audit value (true value) of the transactions it contains. Fourth, she will use the information from her inspected subset to make an inference about the financial statements as a whole. To start off this workflow, Laura first loads BuildIt's financial statements in R.
 
@@ -32,7 +32,7 @@ confidence    <- 0.95   # 95%
 expectedError <- 0.025  # 2.5%
 ```
 
-Many audits are performed according to the *audit risk model (ARM)*, which determines that the uncertainty about Laura's statement as a whole (1 - her confidence) is a factor of three terms: the inherent risk, the control risk, and the detection risk. Inherent risk is the risk posed by an error in BuildIt's ﬁnancial statement that could be material, before consideration of any related control systems (e.g., computer systems). Control risk is the risk that a material misstatement is not prevented or detected by the BuildIt's internal control systems. Detection risk is the risk that Laura will fail to find material misstatements that exist in an BuildIt's ﬁnancial statements. The *ARM* is practically useful because for a given level of audit risk, the tolerable detection risk bears an inverse relation to the other two risks. The *ARM* is useful for Laura because it enables her to incorporate prior knowledge on BuildIt's organization to increase the required risk that she will fail to ﬁnd material misstatements. According to the *ARM*, the audit risk will then be retained.
+Many audits are performed according to the *audit risk model (ARM)*, which determines that the uncertainty about Laura's statement as a whole (1 - her confidence) is a factor of three terms: the inherent risk, the control risk, and the detection risk. Inherent risk is the risk posed by an error in BuildIt's financial statement that could be material, before consideration of any related control systems (e.g., computer systems). Control risk is the risk that a material misstatement is not prevented or detected by BuildIt's internal control systems. Detection risk is the risk that Laura will fail to find material misstatements that exist in an BuildIt's financial statements. The *ARM* is practically useful because for a given level of audit risk, the tolerable detection risk bears an inverse relation to the other two risks. The *ARM* is useful for Laura because it enables her to incorporate prior knowledge on BuildIt's organization to increase the required risk that she will fail to find material misstatements. According to the *ARM*, the audit risk will then be retained.
 
 $$ \text{Audit risk} = \text{Inherent risk} \,\times\, \text{Control risk} \,\times\, \text{Detection risk}$$
 
@@ -87,7 +87,7 @@ Laura can then inspect the result from her planning procedure by using the `prin
 print(planningResult)
 ```
 
-Laura can inspect how the prior distribution compares to the expected posterior distribution by using the `plot()` function. The expected posterior distribution is the posterior distribution that would occur if Laura actually observed a sample of 169 transactions, from wich 4.223 were in error.
+Laura can inspect how the prior distribution compares to the expected posterior distribution by using the `plot()` function. The expected posterior distribution is the posterior distribution that would occur if Laura actually observed a sample of 169 transactions, from which 4.223 were in error.
 
 ```{r fig.align="center", fig.height=4, fig.width=6}
 plot(planningResult)
@@ -152,4 +152,4 @@ plot(evaluationResult)
 
 ## Conclusion
 
-Since the 95% upper confidence bound on the missatement in BuildIt's financial statements is lower than the materiality, Laura can conclude that the financial statements as a whole do not contain material misstatement. Therefore, she can approve BuildIt's financial statements.
+Since the 95% upper confidence bound on the misstatement in BuildIt's financial statements is lower than the materiality, Laura can conclude that the financial statements as a whole do not contain material misstatement. Therefore, she can approve BuildIt's financial statements.
