--- a/vignettes/auditWorkflow.Rmd
+++ b/vignettes/auditWorkflow.Rmd
@@ -36,7 +36,7 @@ Many audits are performed according to the *audit risk model (ARM)*, which deter
 
 $$ \text{Audit risk} = \text{Inherent risk} \,\times\, \text{Control risk} \,\times\, \text{Detection risk}$$
 
-Usually the auditor judges inherent riks and control risk on a three-point scale consisting of low, medium, and high. Different audit firms handle different standard percentages for these categories. Laura's firm defines the probabilities of low, medium, and high respectively as 50%, 60%, and 100%. Because Laura performed testing of BuildIt's computer systems, she assesses the control risk as medium (60%).
+Usually the auditor judges inherent risk and control risk on a three-point scale consisting of low, medium, and high. Different audit firms handle different standard percentages for these categories. Laura's firm defines the probabilities of low, medium, and high respectively as 50%, 60%, and 100%. Because Laura performed testing of BuildIt's computer systems, she assesses the control risk as medium (60%).
 
 ```{r}
 # Specify the inherent risk (ir) and control risk (cr).
