Set up jfa 0.5.0 (#18)
* Setup jfa 0.5.0

+ remove sampling function
+ initial work on description and manual etc.

* Add codecov

* 100 percent coverage in unit tests

* Check in codecov.yml

* Revert "Check in codecov.yml"

This reverts commit 2aeeaa8d01fc97c8eef4d6c25d54f9fcce9b1674.

* Add CITATION

* Create r.yml (#16)

* Create pkgdown.yml

* Logo update

* Revert "Logo update"

This reverts commit 04856711533b3dc32084336471bfadd3cccc3fee.

* Update website

* add code of conduct

* Update templates

--- a/vignettes/auditWorkflow.Rmd
+++ b/vignettes/auditWorkflow.Rmd
@@ -1,13 +1,17 @@
 ---
 title: "jfa: The audit sampling workflow"
+author: Koen Derks
+date: "last modified: 07-11-2020"
 output: 
   rmarkdown::html_vignette:
     toc: true
 vignette: >
   %\VignetteIndexEntry{jfa: The audit sampling workflow}
   %\VignetteEngine{knitr::rmarkdown}
-  \usepackage[utf8]{inputenc}
-author: Koen Derks
+  %\VignetteDepends{jfa}
+  %\VignetteKeywords{audit, workflow, sampling}
+  %\VignettePackage{jfa}
+  %\VignetteEncoding{UTF-8}
 ---
 
 ## Introduction and scenario
@@ -91,7 +95,7 @@ Laura can inspect how the prior distribution compares to the expected posterior 
 plot(planningResult)
 ```
 
-## Stage 2: Sampling from the financial statements
+## Stage 2: Selecting a sample
 
 Laura is now ready to select the required 169 transactions from the financial statements. She can choose to do this according to one of two statistical methods. In *record sampling* (`units = "records"`), inclusion probabilities are assigned on the transaction level, treating transactions with a high value and a low value the same, a transaction of $5,000 is equally likely to be selected as a transaction of $1,000. In *monetary unit sampling* (`units = "mus"`), inclusion probabilities are assigned on the level of individual monetary units (e.g., a dollar). When a dollar is selected to be in the sample, the transaction that includes that dollar is selected. This favors higher transactions, as a transaction of \$5,000 is five times more likely to be selected than a transaction of \$1,000. 
 
