--- a/README.Rmd
+++ b/README.Rmd
@@ -29,7 +29,7 @@ knitr::opts_chunk$set(
 * [Contributing](#contributing) 
 * [Benchmarks](#benchmarks)   
 * [Functions](#functions)
-* [Monthly downloads](#monthly-downloads) 
+* [Package statistics](#package-statistics) 
 
 The `jfa` package can be used to set up the entire audit sampling workflow. For the complete documentation, see the [package website](https://koenderks.github.io/jfa/) or the [package manual](https://cran.r-project.org/web/packages/jfa/jfa.pdf).
 
@@ -166,7 +166,7 @@ Supported features:
 | `quotient` | The quotient estimator |
 | `regression` | The regression estimator |
 
-## Monthly downloads
+## Package statistics
 
 ```{r downloads, echo = FALSE, message = FALSE, warning=FALSE, include = FALSE}
 
@@ -182,32 +182,102 @@ releases          <- c("2020-01-01", "2020-08-01", "2020-09-01", "2020-11-01")
 releaseLabs       <- c("v0.1.0", "v0.2.0", "v0.3.0", "v0.4.0")
 
 p <- ggplot2::ggplot(plotData, ggplot2::aes(x = date, y = count)) +
-      	ggplot2::geom_bar(stat = "identity", fill = rgb(65, 104, 195, maxColorValue = 255), col = "black", size = 1) +
-		ggplot2::scale_x_date(name = "", breaks = xBreaks, labels = scales::date_format("%m-%Y")) +
-		ggplot2::scale_y_continuous(name = "Monthly downloads", breaks = yBreaks, 
-										labels = yBreaks, limits = c(0, max(yBreaks))) +
-		ggplot2::labs(title = "Monthly CRAN downloads since January 2020") +
+      	ggplot2::geom_bar(stat = "identity", fill = rgb(65, 104, 195, maxColorValue = 255), 
+      	                  col = "black", size = 1) +
+		    ggplot2::scale_x_date(name = "", breaks = xBreaks, labels = scales::date_format("%m-%Y")) +
+	    	ggplot2::scale_y_continuous(name = "Monthly downloads", breaks = yBreaks, 
+										                labels = yBreaks, limits = c(0, max(yBreaks))) +
+		    ggplot2::labs(title = "Monthly CRAN downloads since January 2020") +
       	ggplot2::geom_text(mapping = ggplot2::aes(x = date, y = count + 50), label = plotData[["count"]]) +
-		bbplot::bbc_style() +
-		ggplot2::theme(axis.text.x = ggplot2::element_text(angle = 45, hjust = 1, size = 10),
-						axis.text.y = ggplot2::element_text(size = 12), 
-						plot.title = ggplot2::element_text(size = 15)) +
-		ggplot2::geom_curve(data = data.frame(x = as.Date(releases), 
-												y = rep(max(yBreaks) - 25, length(releases)), 
-												xend = as.Date(releases), 
-												yend = rep(max(yBreaks) - 100, length(releases))), 
-							mapping = ggplot2::aes(x = x, y = y, xend = xend, yend = yend), colour = "#555555", size=1, curvature = 0, 
-													arrow = ggplot2::arrow(length = ggplot2::unit(0.025, "npc"))) +
-		ggplot2::annotate(geom = "text", x = as.Date(releases), y = rep(max(yBreaks), length(releases)), 
-							label = releaseLabs, vjust = -0.25)
+	  	  bbplot::bbc_style() +
+		    ggplot2::theme(axis.text.x = ggplot2::element_text(angle = 45, hjust = 1, size = 10),
+						          axis.text.y = ggplot2::element_text(size = 12),
+						          plot.title = ggplot2::element_text(size = 15)) +
+		    ggplot2::geom_curve(data = data.frame(x = as.Date(releases), 
+												    y = rep(max(yBreaks) - 25, length(releases)), 
+												    xend = as.Date(releases), 
+												    yend = rep(max(yBreaks) - 100, length(releases))), 
+						      	        mapping = ggplot2::aes(x = x, y = y, xend = xend, yend = yend), 
+												    colour = "#555555", size=1, curvature = 0, 
+													  arrow = ggplot2::arrow(length = ggplot2::unit(0.025, "npc"))) +
+		    ggplot2::annotate(geom = "text", x = as.Date(releases), y = rep(max(yBreaks), length(releases)), 
+							              label = releaseLabs, vjust = -0.25)
 
-bbplot::finalise_plot(plot_name = p, source = "Source: https://cran-logs.rstudio.com", 
-						save_filepath = paste0(dirname(getwd()), "/jfa/man/figures/readme/downloads/downloads.png"),
-						width_pixels = 640, height_pixels = 350, 
-						logo_image_path = paste0(dirname(getwd()), "/jfa/man/figures/readme/logo/jfaLogo.png"))
+ggplot2::ggsave(plot = p, filename = "man/figures/readme/downloads/downloads.svg")
+
+```
+
+```{r worldmap, echo = FALSE, message = FALSE, warning=FALSE, include = FALSE}
+
+# Load previously downloaded data
+prevData <- read.csv(paste0(dirname(getwd()), "/jfa/man/figures/readme/worldmap/downloads.csv"))
+
+# Download daily data
+dnldata_folder <- installr::download_RStudio_CRAN_data(START = Sys.Date() - 2, END = Sys.Date() - 2)
+dnldata <- installr::read_RStudio_CRAN_data(dnldata_folder, packages = "jfa", use_data_table = TRUE)
+
+# Merge daily data with previously downloaded data and write
+data <- rbind(prevData, dnldata)
+
+write.csv(x = data,
+          file = paste0(dirname(getwd()), "/jfa/man/figures/readme/worldmap/downloads.csv"),
+          row.names = FALSE)
+
+# Make plot data
+counts <- cbind.data.frame(table(data$country))
+names(counts) <- c("country", "count")
+
+# Read world map into R
+world<-maptools::readShapePoly(fn = paste0(dirname(getwd()), 
+                                           "/jfa/man/figures/readme/worldmap/ne_110m_admin_0_countries"))
+
+ISO_full <- as.character(world@data$ISO_A2)
+ISO_full[146] <- "SOM"  # The iso identifier for the Republic of Somaliland is missing
+ISO_full[89]  <- "KV" # as for the Republic of Kosovo
+ISO_full[39]  <- "CYP" # as for Cyprus
+
+# Create color codes for countires  
+colcode <- numeric(length(ISO_full))
+names(colcode) <- ISO_full
+dnl_places <- names(colcode[which(names(colcode) %in% as.character(counts$country))])
+rownames(counts) <- counts$country
+colcode[dnl_places] <- counts[dnl_places, "count"]
+
+world@data$id <- rownames(world@data)
+world.points <- ggplot2::fortify(world, by="id")
+names(colcode) <- rownames(world@data)
+world.points$Downloads <- colcode[world.points$id]
+
+world.map <-  ggplot2::ggplot(data=world.points) +
+                ggplot2::geom_polygon(ggplot2::aes(x = long, y = lat, group=group, fill=Downloads), 
+                                      color="black") +
+                ggplot2::coord_equal() + 
+                ggplot2::theme_classic() +
+                ggplot2::labs(title = "Total CRAN downloads since January 2020") + 
+                ggplot2::scale_fill_gradient2(low = "white", 
+                                              mid = rgb(107, 146, 237, maxColorValue = 255), 
+                                              high = rgb(48, 68, 115, maxColorValue = 255), 
+                                              midpoint = 2500,
+                                              na.value = "white",
+                                              name = "", 
+                                              limits = c(0, 5000)) +
+                ggplot2::theme(axis.line = ggplot2::element_blank(),
+                               axis.text = ggplot2::element_blank(),
+                               axis.ticks = ggplot2::element_blank(),
+                               axis.title = ggplot2::element_blank(),
+                               plot.title = ggplot2::element_text(size = 15),
+                               legend.position = "bottom",
+                               legend.key.width = ggplot2::unit(3, "cm"),
+                               legend.key.height = ggplot2::unit(0.25, "cm"))
+
+ggplot2::ggsave(plot = world.map, filename = "man/figures/readme/worldmap/worldmap.svg")
 
 ```
 
 <p align="center">
-  <img src="man/figures/readme/downloads/downloads.png" alt="downloads"/>
+  <img src="man/figures/readme/downloads/downloads.svg" alt="downloads" width="900" height="400"/>
+</p>
+
+<p align="center">
+  <img src="man/figures/readme/worldmap/worldmap.svg" alt="worldmap" width="900" height="500"/>
 </p>
