--- a/README.Rmd
+++ b/README.Rmd
@@ -30,6 +30,7 @@ knitr::opts_chunk$set(
 * [Getting started](#getting-started)
 * [Benchmarks](#benchmarks)
 * [Contributing](#contributing) 
+* [Cheatsheet](#cheatsheet)
 * [Functions](#functions)
 * [References](#references)
 * [Package statistics](#package-statistics) 
@@ -40,7 +41,7 @@ The `jfa` package can be used to set up the entire audit sampling workflow.
   <img src="man/figures/readme/banner/jfaBanner.png" alt="banner"/>
 </p>
 
-For complete documentation of the package, see the [package website](https://koenderks.github.io/jfa/) or the [package manual](https://cran.r-project.org/web/packages/jfa/jfa.pdf).
+For complete documentation of the package, see the [package website](https://koenderks.github.io/jfa/) or the [package manual](https://cran.r-project.org/package=jfa/jfa.pdf).
 
 ### Authors
 
@@ -101,6 +102,14 @@ The package vignettes contain explanations about the functionality of `jfa` illu
 `jfa` is an open-source project that aims to be useful for the audit community. Your help in benchmarking and extending `jfa` is therefore greatly appreciated. Contributing to `jfa` does not have to take much time or knowledge, and there is extensive information available about it on the [Wiki](https://github.com/koenderks/jfa/wiki) of this repository. 
 
 If you are willing to contribute to the improvement of the package by adding a benchmark, please check out the Wiki page on [how to contribute a benchmark to jfa](https://github.com/koenderks/jfa/wiki/Benchmarks). If you are willing to contribute to the improvement of the package by adding a new statistical method, please check the Wiki page on [how to contribute a new method to jfa](https://github.com/koenderks/jfa/wiki/Methods). 
+
+## Cheatsheet
+
+The cheatsheet can help you get started with the `jfa` package and its workflow. You can download a pdf version [here](https://github.com/koenderks/jfa/raw/master/man/figures/cheatsheet/cheatsheet.pdf).
+
+<p align="center">
+  <img src="man/figures/cheatsheet/cheatsheet.png" alt="cheatsheet"/>
+</p>
 
 ## Functions
 
@@ -213,7 +222,7 @@ The `report()` function takes an object of class `jfaEvaluation` as returned by 
 
 `report(object = NULL, file = NULL, format = "html_document")`
 
-For an example report, see the following [link](https://github.com/koenderks/jfa/tree/master/man/figures/readme/report/report.pdf).
+For an example report, see the following [link](https://github.com/koenderks/jfa/raw/master/man/figures/readme/report/report.pdf).
 
 ## References
 
@@ -244,8 +253,8 @@ xBreaks           <- plotData[["date"]]
 yBreaks           <- pretty(c(0, plotData[["count"]], max(plotData[["count"]]) + 200), n = 6)
 
 # Releases 
-releases          <- c("2020-01-01", "2020-08-01", "2020-09-01", "2020-11-01")
-releaseLabs       <- c("v0.1.0", "v0.2.0", "v0.3.0", "v0.4.0")
+releases          <- c("2020-01-01", "2020-08-01", "2020-09-01", "2020-11-01", "2021-01-01")
+releaseLabs       <- c("v0.1.0", "v0.2.0", "v0.3.0", "v0.4.0", "v0.5.0")
 
 p <- ggplot2::ggplot(plotData, ggplot2::aes(x = date, y = count)) +
       	ggplot2::geom_bar(stat = "identity", fill = rgb(65, 104, 195, maxColorValue = 255), 
