--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,9 @@ knitr::opts_chunk$set(
 
 <img src="man/figures/readme/logo/jfaLogo.png" width="166" height="192" alt="logo" align="right" margin-left="20" margin-right="20"/>
 
-`jfa` is a multi-functional R package for statistical audit sampling. The package provides the user with four generic functions for planning, performing, and evaluating an audit sample. Specifically, it contains functions for calculating sample sizes, selecting the transactions according to standard audit sampling techniques, and calculating various upper limits for the misstatement from the sample or from summary statistics. The `jfa` package also allows the user to create a Bayesian prior probability distribution for use in these functions.
+`jfa` is an R package for statistical audit sampling. The package provides the user with five functions for planning, performing, evaluating, and reporting an audit sample. Specifically, it contains functions for calculating sample sizes, selecting the transactions according to standard audit sampling techniques, and calculating various upper limits for the misstatement from the sample or from summary statistics. The `jfa` package also allows the user to create a prior probability distribution to perform Bayesian audit sampling using these functions.
+
+For complete documentation of the package, see the [package manual](https://cran.r-project.org/package=jfa/jfa.pdf) or visit the [website](https://koenderks.github.io/jfa/).
 
 ## Overview
 
@@ -34,14 +36,6 @@ knitr::opts_chunk$set(
 * [Functions](#functions)
 * [References](#references)
 * [Package statistics](#package-statistics) 
-
-The `jfa` package can be used to set up the entire audit sampling workflow.
-
-<p align="center">
-  <img src="man/figures/readme/banner/jfaBanner.png" alt="banner"/>
-</p>
-
-For complete documentation of the package, see the [package website](https://koenderks.github.io/jfa/) or the [package manual](https://cran.r-project.org/package=jfa/jfa.pdf).
 
 ### Authors
 
@@ -55,7 +49,7 @@ This project is licensed under the open-source [GPL-3](https://www.r-project.org
 
 ## Getting started
 
-The following instructions will get you a copy of the `jfa` package up and running on your local machine for use in R and RStudio. 
+The following instructions will get the `jfa` package up and running on your local machine for use in R and RStudio. 
 
 ### Prerequisites
 
@@ -63,13 +57,13 @@ The following instructions will get you a copy of the `jfa` package up and runni
 
 ### Installing
 
-The `jfa` package is simple to download and set-up. The most recent version from [CRAN](https://cran.r-project.org/package=jfa) (0.4.0) can be downloaded by running the following command in R or RStudio:
+The `jfa` package is simple to download and set-up. The most recent version from [CRAN](https://cran.r-project.org/package=jfa) (0.5.0) can be downloaded by running the following command in R or RStudio:
 
 ```
 install.packages("jfa")
 ```
 
-Or you can download the most recent (development) version from GitHub using:
+Alternatively, you can download the most recent (development) version from GitHub using:
 
 ```
 devtools::install.github("koenderks/jfa")
@@ -83,7 +77,7 @@ library(jfa)
 
 ### Vignettes
 
-The package vignettes contain explanations about the functionality of `jfa` illustated using simple examples.
+The package vignettes show how to use the `jfa` package using simple examples.
 
 * [Get started](https://koenderks.github.io/jfa/articles/jfa.html) 
 * [The audit sampling workflow](https://koenderks.github.io/jfa/articles/v1auditWorkflow.html)
@@ -93,7 +87,7 @@ The package vignettes contain explanations about the functionality of `jfa` illu
 
 ## Benchmarks
 
-`jfa`'s results are currently being verified against the following benchmarks:
+To validate the output, `jfa`'s results are currently being verified against the following benchmark(s):
 
 - [Audit Sampling: Audit Guide](https://future.aicpa.org/cpe-learning/publication/audit-sampling-audit-guide-OPL) (Appendix A and Appendix C)
 
@@ -108,18 +102,22 @@ If you are willing to contribute to the improvement of the package by adding a b
 The cheatsheet can help you get started with the `jfa` package and its workflow. You can download a pdf version [here](https://github.com/koenderks/jfa/raw/master/man/figures/cheatsheet/cheatsheet.pdf).
 
 <p align="center">
-  <img src="man/figures/cheatsheet/cheatsheet.png" alt="cheatsheet"/>
+  <img src="man/figures/cheatsheet/cheatsheet.png" alt="cheatsheet" width="1000">
 </p>
 
 ## Functions
 
-Below is a list of the available functions in the current version of `jfa`, sorted by their occurrence in the standard audit sampling workflow.
+Below you can find a list of the functions in the current version of `jfa` sorted by their occurrence in the standard audit sampling workflow.
 
 * [`auditPrior()`](#create-a-prior-distribution-with-the-auditprior-function)
 * [`planning()`](#plan-a-sample-with-the-planning-function)
 * [`selection()`](#select-transactions-with-the-selection-function)
 * [`evaluation()`](#evaluate-a-sample-with-the-evaluation-function)
 * [`report()`](#generate-a-report-with-the-report-function)
+
+<p align="center">
+  <img src="man/figures/readme/banner/jfaBanner.png" alt="banner"/>
+</p>
 
 ### Create a prior distribution with the `auditPrior()` function:
 
@@ -228,7 +226,7 @@ For an example report, see the following [link](https://github.com/koenderks/jfa
 
 - Bickel, P. J. (1992). Inference and auditing: The Stringer bound. *International Statistical Review*, 60(2), 197–209. - [View online](https://www.jstor.org/stable/1403650)
 - Cox, D. R., & Snell, E. J. (1979). On sampling and the estimation of rare errors. *Biometrika*, 66(1), 125-132. - [View online](https://doi.org/10.1093/biomet/66.1.125)
-- Derks, K. (2020). jfa: Bayesian and classical audit sampling. R package version 0.4.0. - [View online](https://cran.r-project.org/package=jfa)
+- Derks, K. (2020). jfa: Bayesian and classical audit sampling. R package version 0.5.0. - [View online](https://cran.r-project.org/package=jfa)
 - Derks, K., de Swart, J., van Batenburg, P., Wagenmakers, E.-J., & Wetzels, R. (2020). Priors in a Bayesian audit: How integration of existing information into the prior distribution can improve audit transparency and efficiency. *Under review*. - [View online](https://psyarxiv.com/8fhkp/)
 - Dworin, L. D. and Grimlund, R. A. (1984). Dollar-unit sampling for accounts receivable and inventory. *The Accounting Review*, 59(2), 218–241. - [View online](https://www.jstor.org/stable/247296)
 - Dyer, D., & Pierce, R. L. (1993). On the choice of the prior distribution in hypergeometric sampling. *Communications in Statistics - Theory and Methods*, 22(8), 2125-2146. - [View online](https://www.tandfonline.com/doi/abs/10.1080/03610929308831139)
