--- a/README.Rmd
+++ b/README.Rmd
@@ -32,7 +32,7 @@ For complete documentation of the package, see the [package manual](https://cran
 * [Getting started](#getting-started)
 * [Benchmarks](#benchmarks)
 * [Contributing](#contributing) 
-* [Cheatsheet](#cheatsheet)
+* [Cheat sheets](#cheat-sheets)
 * [Functions](#functions)
 * [References](#references)
 * [Package statistics](#package-statistics) 
@@ -97,13 +97,18 @@ To validate the output, `jfa`'s results are currently being verified against the
 
 If you are willing to contribute to the improvement of the package by adding a benchmark, please check out the Wiki page on [how to contribute a benchmark to jfa](https://github.com/koenderks/jfa/wiki/Benchmarks). If you are willing to contribute to the improvement of the package by adding a new statistical method, please check the Wiki page on [how to contribute a new method to jfa](https://github.com/koenderks/jfa/wiki/Methods). 
 
-## Cheatsheet
+## Cheat sheets
 
-The cheatsheet can help you get started with the `jfa` package and its workflow. You can download a pdf version [here](https://github.com/koenderks/jfa/raw/master/man/figures/cheatsheet/cheatsheet.pdf).
+The cheat sheet below can help you get started with the `jfa` package and its workflow. You can download a pdf version [here](https://github.com/koenderks/jfa/raw/master/man/figures/cheatsheet/cheatsheet.pdf).
 
 <p align="center">
   <img src="man/figures/cheatsheet/cheatsheet.png" alt="cheatsheet" width="1000">
 </p>
+
+Additionally, there are several cheat sheets available that contain tables with statistical sample sizes. These tables are generated using `jfa`.
+
+- [Statistical Sample Sizes based on the Binomial Distribution](https://github.com/koenderks/jfa/raw/master/man/figures/tables/jfaBinomialSampleSizes.pdf)
+- [Statistical Sample Sizes based on the Poisson Distribution](https://github.com/koenderks/jfa/raw/master/man/figures/tables/jfaPoissonSampleSizes.pdf)
 
 ## Functions
 
